# CS-105

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Hittable.cpp  Hittable.h  HittableList.cpp  HittableList.h  Interval.h  Project Proposal  Project Proposal.md  RTproject.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vec3.cpp  Vec3.h  image.ppm  main.cpp  obj_loader_testing.cpp  test.mtl
